--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>365Home</title>
 
     <style>
+         ::-webkit-scrollbar {
+            display: none;
+        }
+        
         body {
             background-color: black;
         }
