--- a/movies.html
+++ b/movies.html
@@ -10,6 +10,10 @@
     <title>365Movies</title>
 
     <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+        
         body {
             background-color: black;
         }
